* re-write test system in python * add more statistical tests * fix some problems in deltanll and mcmc modules revealed in tests

--- a/test/test-stat/README
+++ b/test/test-stat/README
@@ -1,7 +1,8 @@
-For a decription of the tests, refer to the Testing page in the doxygen documentation.
+For a description of the tests, refer to the Testing page in the doxygen documentation.
 
 To run the tests, you need additional dependencies, namely:
- * bc
- * sqlite3 command line interface
+ * python
+ * sqlite3 for python
+ * scipy
 
-Both should be available through packages on almost any distribution.
+These should be available through packages on almost any distribution.
